<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:padding="5dp">

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@drawable/icon_user"
            android:id="@+id/user_icon" android:contentDescription="@string/layout_post_user_icon"
            android:scaleType="centerCrop" android:layout_margin="10sp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_weight="1">
        <TextView
                android:text="@string/layout_post_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/user_name" android:textSize="20sp"/>
        <TextView
                android:text="@string/layout_post_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/user_id" android:textSize="18sp"/>
        <TextView
                android:text="@string/layout_post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/content" android:textSize="20sp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp" app:srcCompat="@color/colorWhite" android:id="@+id/image01"
                    android:visibility="visible" android:layout_weight="1" android:scaleType="centerCrop"
                    android:contentDescription="@string/layout_post_image01" android:layout_marginTop="5sp"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp" app:srcCompat="@color/colorWhite" android:id="@+id/image02"
                    android:visibility="visible" android:layout_weight="1" android:scaleType="centerCrop"
                    android:contentDescription="@string/layout_post_image02" android:layout_marginTop="5sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>