<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main_post_detail"
        tools:context=".MainPostDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@android:color/darker_gray"
            android:id="@+id/loading_background">

        <LinearLayout
                android:orientation="vertical" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent">
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/loading_progress_ring"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:indeterminateTint="@color/colorWhite" android:indeterminate="true"
                    android:indeterminateTintMode="src_in" android:layout_marginBottom="10dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/loading_text" android:text="@string/app_post_detail_loading_text"
                      android:textSize="20sp" android:textAlignment="center" android:gravity="center_vertical"
                      android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/main_content" android:visibility="gone">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="100sp"
                        android:layout_height="100sp" app:srcCompat="@drawable/icon_user"
                        android:id="@+id/user_icon" android:contentDescription="@string/app_post_detail_user_icon"
                        android:padding="10sp" android:scaleType="centerCrop"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/app_post_detail_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/user_name" android:textSize="20sp"
                            android:padding="10sp"/>
                    <TextView
                            android:text="@string/app_post_detail_user_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/user_id" android:textSize="18sp"
                            android:padding="10sp"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/app_post_detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/content"
                    android:textSize="20sp" android:padding="10sp"/>
            <TextView
                    android:text="@string/app_post_detail_anime_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/anime_title"
                    android:textColor="@color/colorPink" android:textSize="20sp" android:padding="10sp"/>
            <TextView
                    android:text="@string/app_post_detail_chara_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/chara_name"
                    android:textColor="@color/colorPink" android:textSize="20sp" android:padding="10sp"/>
            <TextView
                    android:text="@string/app_post_detail_timestamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/timestamp"
                    android:textSize="20sp" android:padding="10sp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp" android:paddingRight="10dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp" app:srcCompat="@color/colorWhite" android:id="@+id/image01"
                        android:layout_weight="1" android:scaleType="centerCrop"
                        android:contentDescription="@string/app_post_detail_image01"/>
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp" app:srcCompat="@color/colorWhite" android:id="@+id/image02"
                        android:layout_weight="1" android:scaleType="centerCrop"
                        android:contentDescription="@string/app_post_detail_image02"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>