<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:paddingLeft="20dp" android:paddingTop="10dp"
              android:paddingBottom="10dp" android:paddingRight="20dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp" app:srcCompat="@drawable/icon_user" android:id="@+id/user_icon"
                android:contentDescription="@string/layout_notice_icon" android:scaleType="centerCrop"
                android:layout_margin="10sp"/>
        <TextView
                android:text="@string/layout_notice_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/user_name" android:textSize="22sp"/>
    </LinearLayout>
    <TextView
            android:text="@string/layout_notice_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/content" android:textSize="18sp"/>
</LinearLayout>