<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainProfileFragment"
             android:id="@+id/root_layout" android:background="@color/colorWhite">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="80sp"
                    android:layout_height="80sp" app:srcCompat="@drawable/icon_user"
                    android:id="@+id/user_icon" android:contentDescription="@string/app_main_profile_icon"
                    android:layout_margin="10sp" android:scaleType="centerCrop"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:gravity="right"
                    android:paddingRight="20sp" android:paddingTop="10sp">
                <Button
                        android:text="@string/app_main_profile_edit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button_profile_edit"
                        android:background="@drawable/pink_button" android:paddingLeft="20sp"
                        android:paddingRight="20sp" android:paddingBottom="10sp" android:paddingTop="10sp"
                        android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/app_main_profile_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/user_name" android:textSize="20sp"
                android:padding="10sp"/>
        <TextView
                android:text="@string/app_main_profile_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/user_id" android:textSize="18sp"
                android:paddingRight="10sp" android:paddingLeft="10sp" android:paddingTop="5sp"
                android:paddingBottom="5sp"/>
        <TextView
                android:text="@string/app_main_profile_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/profile"
                android:textSize="20sp" android:padding="10sp"/>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/timeline"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</FrameLayout>