<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".SignUpActivity" android:background="@color/colorWhite">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true"
                android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/sign_up_string_user_id"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true"
                android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/sign_up_string_user_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="300"
                app:errorEnabled="true"
                android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/sign_up_string_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:counterMaxLength="50"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/sign_up_string_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:text="@string/sign_up_string_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_sign_up"
                android:background="@color/colorPink"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>