<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TitleActivity" android:background="@color/colorWhite" android:id="@+id/root_layout">

    <RelativeLayout
            android:id="@+id/auto_sign_in_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="100dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/auto_sign_in_dialog" android:paddingTop="10dp" android:paddingBottom="10dp"
            android:paddingRight="20dp" android:paddingLeft="20dp">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorWhite"
                android:indeterminateTintMode="src_in"
                android:id="@+id/progress_ring"/>
        <TextView
                android:text="@string/title_auto_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/text_user_id"
                android:layout_toEndOf="@+id/progress_ring"
                android:layout_centerVertical="true" android:layout_marginStart="10dp"
                android:textColor="@color/colorWhite"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="375dp"
            android:layout_height="317dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout">

        <Button
                android:text="@string/title_sign_up_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_sign_up"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:backgroundTint="@color/colorPink"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/logo_image"/>

        <ImageView
                android:layout_width="340dp"
                android:layout_height="176dp"
                app:srcCompat="@drawable/logo"
                android:id="@+id/logo_image"
                android:contentDescription="@string/title_logo_string"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:text="@string/title_sign_in_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_sign_in"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>