<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main_post_add"
        tools:context=".MainPostAddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@android:color/darker_gray"
            android:id="@+id/loading_background">

        <LinearLayout
                android:orientation="vertical" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent">
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/loading_progress_ring"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:indeterminateTint="@color/colorWhite" android:indeterminate="true"
                    android:indeterminateTintMode="src_in" android:layout_marginBottom="10dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/loading_text" android:text="@string/app_post_add_loading_text"
                      android:textSize="20sp" android:textAlignment="center" android:gravity="center_vertical"
                      android:textColor="@color/colorWhite"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/text_input_post_content" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/app_post_add_input"
            android:background="@drawable/style_border" android:layout_marginTop="16dp"
            android:paddingLeft="20dp" android:paddingTop="20dp" android:paddingBottom="20dp"
            android:paddingRight="20dp" tools:ignore="Autofill"/>
    <TextView
            android:text="@string/app_post_add_chara_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button_chara_select"
            app:layout_constraintTop_toBottomOf="@+id/text_input_post_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingLeft="30dp" android:paddingRight="30dp" android:paddingTop="20dp"
            android:paddingBottom="20dp" android:background="@drawable/style_border"
            android:textColor="@color/colorPink" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <LinearLayout
            android:id="@+id/image_area"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/button_chara_select"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">
        <ImageButton
                android:layout_height="150dp" app:srcCompat="@drawable/icon_add" android:id="@+id/button_image_select_1"
                android:layout_weight="1" android:contentDescription="@string/app_name"
                android:layout_width="match_parent" android:scaleType="center"/>
        <ImageButton
                android:layout_height="150dp" app:srcCompat="@drawable/icon_add" android:id="@+id/button_image_select_2"
                android:layout_weight="1" android:contentDescription="@string/app_name"
                android:layout_width="match_parent" android:scaleType="center" android:visibility="invisible"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>